styles/styles.css
/* 
TODO: 

*/

/* RESET */

* {
  vertical-align: baseline;
	font-weight: inherit;
	font-family: inherit;
	font-style: inherit;
	font-size: 100%;
  border: 0 none;
	outline: 0;
	padding: 0;
  margin: 0;
}

/* BODY STYLING */

body {
  background-color: #EAEAEA;
  font-family: 'Cinzel', serif;
}

/* ELEMENT STYLING */

a {
  position: relative;
  text-decoration: none;
  color: inherit;
}

ul {
  list-style-type: none;
}

/* NAV */

nav {
  box-sizing: border-box;
  display: flex;
  width: 100%;
  padding: 25px;
  align-items: center;
  justify-content: space-between;
}

/* logo/title */

header {
  display: flex;
  align-items: center;
}

header h1 {
  margin-left: 15px;
  padding-bottom: 8px;
  border-bottom: 1px solid black;
  font-size: 25px;
}

.cross {
  width: 37px;
  height: 67px;
}

/* links */

.nav-links a {
  font-size: 18px;
  padding: 0px 10px 0px 10px;
}

.nav-links li {
  display: inline;
}

/* link underline animation */

.nav-links > li > a:before {
  content: "";
  position: absolute;
  width: 95%;
  height: 1px;
  top: 30px;
  bottom: 0;
  left: 0;
  background-color: #000;
  visibility: hidden;
  -webkit-transform: scaleX(0);
  transform: scaleX(0);
  -webkit-transition: all 0.2s ease-in-out 0s;
  transition: all 0.2s ease-in-out 0s;
}

.nav-links > li > a:hover:before {
  visibility: visible;
  -webkit-transform: scaleX(1);
  transform: scaleX(1);
}

/* dropdown menu */

.nav-dropdown {
  position: relative;
}

.dropdown-list {
  display: none;
  position: absolute;
  left: 1px;
  width: 100%;
  background-color: #EAEAEA;
  border: black 1px solid;
  z-index: 1;
}

.dropdown-list a {
  display: block;
  font-family: 'Quattrocento', serif;
  padding-top: 10px;
  padding-bottom: 10px;
  border-bottom:black 1px solid;
  font-size: 17px;
  color: #000;
}

.dropdown-list a:hover {
  background-color: #306060;
  color: white;
}

/* link chevrons */

.dropdown-icon {
  font-size: 28px;
  position: relative;
  top: 5px;
  right: 6px;
}

/* MEMBER LOGIN */

.user-icon {
  font-size: 32px;
  position: relative;
  top: 5px;
  color: white;
}

#login {
  box-sizing: border-box;
  background-color: darkslategray;
  color: white;
  border-radius: 5px;
  padding: 10px;
}

#login:hover {
  background-color: #306060;
}

/* underline animation disabled */

#login:hover:before {
  visibility: hidden;
}

/* --- MAIN SECTION --- */

main {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  /* background image */
  background:
    linear-gradient(
      rgba(0, 0, 0, 0.5),
      rgba(0, 0, 0, 0.5)
    ),
    url(../images/bible.jpeg);
  background-size: cover;
  background-position: center;
  width: 100%;
  height: 500px;
}

/* text box */

.main-text {
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 80%;
  height: 60%;
  justify-content: space-between;
  color: white;
}

/* main text */

.main-text h2 {
  font-size: 55px;
  position: relative;
  text-align: center;
}

.main-text h3 {
  font-size: 32px;
  padding-top: 30px;
}

/* divider */

.main-text h2:after {
	content: '';
	width: 75%;
	left: 12%;
	height: 1px;
	background:white;
	position: absolute;
	bottom: -10px;
}

/* MORE INFO BUTTON */

/* hover animation */

.main-text a:hover {
  background-color: darkslategrey;
  -webkit-transition: all 0.3s ease-in-out 0s;
  transition: all 0.3s ease-in-out 0s;
}

.main-text a {
  font-size: 16px;
  border: white 1px solid;
  padding: 10px 50px;
  /* reverse hover animation on mouseout */
  -webkit-transition: all 0.3s ease-in-out 0s;
  transition: all 0.3s ease-in-out 0s;
}

/* more info chevron */

.more-info-icon {
  font-size: 18px;
  position: relative;
  top: 2px;
  color: white;
}


/* --- INFO SECTION --- */

section {
  display: flex;
  align-items: center;
  justify-content: center;
  justify-content: space-around;
  width: 100%;
  height: 450px;
}

/* section items */

.section-item {
  background-color: rgba(248, 248, 248, 0.75);
  box-shadow: 0 0 2px 0 #bbbbbb;
  text-align: center;
  font-size: 26px;
  width: 400px;
  height: 325px;
}

.section-item:hover {
	background-color: rgba(252, 252, 252, 0.9);
	box-shadow: 0 0 20px 0 #bbbbbb;
}

/* section icons */

.section-icon {
  width: 168px;
  height: 168px;
  margin: 30px 0 30px 0px;
}

/* adjustment to center notepad icon */

.note {
  margin-left: 30px;
}

/* --- MEDIA QUERIES --- */

/* --- NAV --- */

@media all and (max-width: 1365px) {
  nav {
    flex-direction: column;
  }
  
  header {
    margin-bottom: 25px;
  }
}

@media all and (max-width: 884px) {
  .nav-links {
    display: flex;
    flex-direction: column;
  }
  .nav-links a {
    font-size: 18px;
    margin: 10px 0px 10px 0px;
  }

  /* disable hover */

  .nav-links > a:hover:before {
    visibility: hidden;
  }

  #login {
    text-align: center;
    padding: 5px;
  }

  /* hide nav icons */

  .dropdown-icon {
    display: none;
  }
  
  .user-icon {
    display: none;
  }
}

/* --- MAIN --- */

/* main text */

@media all and (max-width: 820px) {
  .main-text h3 {
    padding-top: 30px;
    padding-bottom: 30px;
  }
}

@media all and (max-width: 518px) {
  main {
    height: 80vh;
  }
  .main-text h3 {
    font-size: 25px;
  }
}

/* --- SECTION --- */

/* section items */

@media all and (max-width: 1300px) {
  section {
    flex-direction: column;
    height: 80%;
  }

  .section-item {
    margin-top: 35px;
    margin-bottom: 35px;
  }
}

@media all and (max-width: 450px) {
  .section-item {
    width: 250px;
    height: 250px;
  }
  .section-icon {
    width: 100px;
    height: 100px;
  }
}

